# ZPR-19L

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
doc/: Doxyfile  diagram.drawio  diagram_klas.drawio  final_doc.md  initial.md  task_info.md
include/resmond/: clientinterface.hpp  emailsender.hpp  exceptions.hpp  limitmanager.hpp  linuxresourcemonitor.hpp  processmanager.hpp  resourcemonitor.hpp
include/resource_monitor/: clientinterface.hpp
script/: mailer  mailer.py  resmon.py  resmond
src/: main.cpp
src/resmond/: clientinterface.cpp  emailsender.cpp  limitmanager.cpp  linuxresourcemonitor.cpp  processmanager.cpp  resourcemonitor.cpp
src/resource_monitor/: clientinterface.cpp
test/: test-clientinterface.cpp  test-example.cpp  test-limitmanager.cpp  test-main.cpp  test-processmanager.cpp
